# src/main/kotlin/yadwy/app/yadwyservice/category/api/CreateCategoryController.kt
@@ -1,0 +1,34 @@
+package yadwy.app.yadwyservice.category.api
+
+import app.yadwy.api.CreateCategoryApi
+import app.yadwy.model.CategoryResponseDto
+import app.yadwy.model.CreateCategoryRequestDto
+import app.yadwy.model.LocalizedDto
+import org.springframework.http.HttpStatus
+import org.springframework.http.ResponseEntity
+import org.springframework.web.bind.annotation.RestController
+import yadwy.app.yadwyservice.category.application.models.CreateCategoryRequest
+import yadwy.app.yadwyservice.category.application.usecases.CreateCategory
+import yadwy.app.yadwyservice.sharedkernel.domain.models.Localized
+
+@RestController
+class CreateCategoryController(
+    private val createCategory: CreateCategory
+) : CreateCategoryApi {
+
+    override fun createCategory(createCategoryRequestDto: CreateCategoryRequestDto): ResponseEntity<CategoryResponseDto> {
+        val request = CreateCategoryRequest(
+            name = createCategoryRequestDto.name.toDomain(),
+            slug = createCategoryRequestDto.slug,
+            imageUrl = createCategoryRequestDto.imageUrl,
+            description = createCategoryRequestDto.description?.toDomain(),
+            parentId = createCategoryRequestDto.parentId
+        )
+
+        val response = createCategory.execute(request)
+
+        return ResponseEntity.status(HttpStatus.CREATED).body(response.toDto())
+    }
+}
+
+private fun LocalizedDto.toDomain() = Localized(ar = ar, en = en ?: "")
